Debut de la stylisation en css

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
       content="Site web de tchat pour l'entreprise Groupomania"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/icon.ico">
+
     <title>Groupomania React Tchat</title>
   </head>
   <body>
